--- a/public/sass/abstract/_variables.scss
+++ b/public/sass/abstract/_variables.scss
@@ -1,7 +1,11 @@
 // COLOR
-$color-primary: #fe4a49;
-$color-secondary: #fed766;
-$color-tertiary: #009fb7;
+//$color-primary: #fe4a49;
+//$color-secondary: #fed766;
+//$color-tertiary: #009fb7;
+
+$color-primary: #fe3434;
+$color-secondary: #fed65d;
+$color-tertiary: #007c8f;
 
 $color-primary-dark: #510000;
 $color-secondary-dark: #513d00;
