--- a/public/sass/components/_button.scss
+++ b/public/sass/components/_button.scss
@@ -14,9 +14,14 @@
     translate: -2px -2px;
     box-shadow: 2px 2px 0 variables.$color-white;
   }
-  &:active {
+  &:active &:focus {
     translate: 2px 2px;
     color: variables.$color-white;
     box-shadow: none;
+  }
+  @media (hover: none) and (pointer: coarse) {
+    translate: 0;
+    color: variables.$color-grey-dark-4;
+    /* Add hover styles here */
   }
 }
