--- a/public/sass/layout/_header.scss
+++ b/public/sass/layout/_header.scss
@@ -11,9 +11,6 @@
   @include mixins.respond(tab-land) {
     padding-top: 2rem;
   }
-  @include mixins.respond(tab-port) {
-    display: none;
-  }
 
   &__heading-title {
     display: flex;
